--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
 </head>
 
 <body>
-  <div class="bg-motif" aria-hidden="true"></div>
+  <div class="bg-motif" aria-hidden="true">
+  <svg class="motif" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
+    <defs>
+      <pattern id="girih" width="120" height="120" patternUnits="userSpaceOnUse">
+        <path d="M60 10 L85 35 L60 60 L35 35 Z" fill="none" stroke="rgba(38,64,47,0.18)" stroke-width="1"/>
+        <path d="M60 60 L85 85 L60 110 L35 85 Z" fill="none" stroke="rgba(0,85,138,0.14)" stroke-width="1"/>
+        <path d="M10 60 L35 35 L60 60 L35 85 Z" fill="none" stroke="rgba(209,154,0,0.16)" stroke-width="1"/>
+        <path d="M110 60 L85 35 L60 60 L85 85 Z" fill="none" stroke="rgba(209,154,0,0.10)" stroke-width="1"/>
+        <circle cx="60" cy="60" r="2" fill="rgba(38,64,47,0.20)"/>
+      </pattern>
+
+      <radialGradient id="fade" cx="50%" cy="50%" r="60%">
+        <stop offset="0%" stop-color="rgba(38,64,47,0.10)"/>
+        <stop offset="55%" stop-color="rgba(38,64,47,0.04)"/>
+        <stop offset="100%" stop-color="rgba(38,64,47,0)"/>
+      </radialGradient>
+    </defs>
+
+    <rect x="0" y="0" width="600" height="600" fill="url(#girih)" />
+    <rect x="0" y="0" width="600" height="600" fill="url(#fade)" />
+  </svg>
+</div>
+
 
   <header class="site-header">
     <div class="container header-inner">
