--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
     <rect x="0" y="0" width="600" height="600" fill="url(#fade)" />
   </svg>
 </div>
+<div class="floating-layer" aria-hidden="true">
+  <div class="float float-1"></div>
+  <div class="float float-2"></div>
+  <div class="float float-3"></div>
+</div>
 
 
   <header class="site-header">
