--- a/index.html
+++ b/index.html
@@ -1,58 +1,96 @@
-/* =====================
-   Floating Architectural Elements (Guaranteed Visible)
-===================== */
+/* ============================================================
+   ULTRA-PREMIUM ARCHITECTURAL LAYER
+   ============================================================ */
+
+:root {
+  --gold-accent: rgba(209,154,0,0.25);
+  --deep-green: rgba(38,64,47,0.12);
+  --soft-blue: rgba(0,85,138,0.18);
+}
 
 .floating-layer {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   pointer-events: none;
-  z-index: 0; /* visible */
-  opacity: 0.85;
-  mix-blend-mode: multiply;
+  z-index: 0;
+  overflow: hidden;
 }
 
-.float {
-  position: absolute;
-  border: 1px solid rgba(38,64,47,0.18);
-  background: radial-gradient(circle at 30% 30%, rgba(209,154,0,0.06), transparent 58%);
-  transform: rotate(45deg);
-  animation: drift 16s ease-in-out infinite alternate;
-  filter: blur(0.2px);
-}
-
+/* المان ۱: مربع طلایی شناور (سمت چپ بالا) */
 .float-1 {
-  width: 240px;
-  height: 240px;
-  top: 16%;
-  left: 8%;
-  border-color: rgba(209,154,0,0.24);
+  position: absolute;
+  width: clamp(150px, 20vw, 250px); /* اندازه منعطف نسبت به نمایشگر */
+  height: clamp(150px, 20vw, 250px);
+  top: 10%;
+  left: 5%;
+  border: 0.8px solid var(--gold-accent);
+  background: linear-gradient(145deg, rgba(209,154,0,0.05), transparent);
+  transform: rotate(45deg);
+  backdrop-filter: blur(2px);
+  animation: floatMaster 15s ease-in-out infinite alternate;
+  box-shadow: inset 0 0 20px rgba(209,154,0,0.02);
 }
 
+/* المان ۲: مستطیل کشیده پایین (حس پایداری معماری) */
 .float-2 {
-  width: 170px;
-  height: 170px;
-  bottom: 20%;
-  right: 10%;
-  border-color: rgba(0,85,138,0.20);
-  animation-duration: 20s;
+  position: absolute;
+  width: 120px;
+  height: 300px;
+  bottom: -50px;
+  right: 12%;
+  border-left: 0.5px solid var(--soft-blue);
+  background: linear-gradient(to top, rgba(0,85,138,0.03), transparent);
+  transform: rotate(-10deg);
+  animation: floatMaster 22s ease-in-out infinite alternate-reverse;
 }
 
-.float-3 {
-  width: 330px;
-  height: 330px;
-  bottom: 6%;
-  left: 44%;
-  border-color: rgba(38,64,47,0.10);
-  animation-duration: 24s;
+/* المان ۳: خطوط شبکه‌ای (Visual Grid) */
+.floating-layer::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 15%;
+  width: 1px;
+  height: 100%;
+  background: linear-gradient(to bottom, 
+    transparent 0%, 
+    var(--deep-green) 20%, 
+    var(--deep-green) 80%, 
+    transparent 100%);
+  opacity: 0.4;
 }
 
-@keyframes drift {
-  from { transform: rotate(45deg) translateY(0px); }
-  to   { transform: rotate(45deg) translateY(-46px); }
+/* المان ۴: هاله نوری اشرافی (Top Glow) */
+.floating-layer::after {
+  content: '';
+  position: absolute;
+  width: 80vw;
+  height: 80vh;
+  top: -20vh;
+  right: -10vw;
+  background: radial-gradient(circle, rgba(209,154,0,0.07) 0%, transparent 70%);
+  filter: blur(50px);
 }
 
-/* Keep content above floating shapes */
+/* انیمیشن فوقِ نرم */
+@keyframes floatMaster {
+  0% { transform: rotate(45deg) translate(0, 0) scale(1); }
+  33% { transform: rotate(47deg) translate(20px, -15px) scale(1.02); }
+  66% { transform: rotate(43deg) translate(-10px, 25px) scale(0.98); }
+  100% { transform: rotate(45deg) translate(0, 0) scale(1); }
+}
+
+/* لایه‌بندی محتوا */
 .site-header, main, footer {
   position: relative;
-  z-index: 2;
+  z-index: 10;
+}
+
+/* بهینه‌سازی برای موبایل */
+@media (max-width: 768px) {
+  .float-1 { width: 120px; height: 120px; left: -20px; }
+  .floating-layer::after { display: none; }
 }
