--- a/index.html
+++ b/index.html
@@ -1,96 +1,101 @@
 /* ============================================================
-   ULTRA-PREMIUM ARCHITECTURAL LAYER
+   PREMIUM ARCHITECTURAL FLOATING LAYER (OPTIMIZED)
    ============================================================ */
 
-:root {
-  --gold-accent: rgba(209,154,0,0.25);
-  --deep-green: rgba(38,64,47,0.12);
-  --soft-blue: rgba(0,85,138,0.18);
-}
-
+/* لایه اصلی نگهدارنده */
 .floating-layer {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  pointer-events: none;
+  inset: 0;
+  pointer-events: none; /* جلوگیری از تداخل با کلیک‌های کاربر */
   z-index: 0;
   overflow: hidden;
+  background: transparent;
 }
 
-/* المان ۱: مربع طلایی شناور (سمت چپ بالا) */
+/* استایل مشترک المان‌های هندسی */
+.float {
+  position: absolute;
+  border: 0.5px solid rgba(38,64,47,0.12); /* خطوط مویی و ظریف */
+  background: linear-gradient(135deg, rgba(209,154,0,0.02) 0%, transparent 100%);
+  backdrop-filter: blur(1px);
+  transition: all 0.8s ease-out;
+}
+
+/* مربع شناور سمت چپ بالا (المان اصلی مورد نظر شما) */
 .float-1 {
-  position: absolute;
-  width: clamp(150px, 20vw, 250px); /* اندازه منعطف نسبت به نمایشگر */
-  height: clamp(150px, 20vw, 250px);
-  top: 10%;
-  left: 5%;
-  border: 0.8px solid var(--gold-accent);
-  background: linear-gradient(145deg, rgba(209,154,0,0.05), transparent);
+  width: 200px;
+  height: 200px;
+  top: 12%;
+  left: 7%;
+  border-color: rgba(209,154,0,0.25);
   transform: rotate(45deg);
-  backdrop-filter: blur(2px);
-  animation: floatMaster 15s ease-in-out infinite alternate;
-  box-shadow: inset 0 0 20px rgba(209,154,0,0.02);
+  animation: luxuryDrift 14s ease-in-out infinite alternate;
+  box-shadow: -10px -10px 30px rgba(209,154,0,0.03);
 }
 
-/* المان ۲: مستطیل کشیده پایین (حس پایداری معماری) */
+/* المان پایین سمت راست */
 .float-2 {
-  position: absolute;
-  width: 120px;
+  width: 160px;
+  height: 160px;
+  bottom: 15%;
+  right: 10%;
+  border-color: rgba(0,85,138,0.18);
+  transform: rotate(-15deg);
+  animation: luxuryDrift 20s ease-in-out infinite alternate-reverse;
+}
+
+/* المان مینیمال مرکزی (بسیار محو) */
+.float-3 {
+  width: 300px;
   height: 300px;
   bottom: -50px;
-  right: 12%;
-  border-left: 0.5px solid var(--soft-blue);
-  background: linear-gradient(to top, rgba(0,85,138,0.03), transparent);
-  transform: rotate(-10deg);
-  animation: floatMaster 22s ease-in-out infinite alternate-reverse;
+  left: 35%;
+  border-color: rgba(38,64,47,0.06);
+  border-radius: 50%; /* دایره بزرگ برای تضاد با مربع‌ها */
+  animation: luxuryDrift 25s linear infinite;
 }
 
-/* المان ۳: خطوط شبکه‌ای (Visual Grid) */
+/* المان جدید: خطوط راهنمای معماری (Luxury Grid Lines) */
 .floating-layer::before {
   content: '';
   position: absolute;
   top: 0;
-  left: 15%;
+  left: 20%;
   width: 1px;
   height: 100%;
-  background: linear-gradient(to bottom, 
-    transparent 0%, 
-    var(--deep-green) 20%, 
-    var(--deep-green) 80%, 
-    transparent 100%);
-  opacity: 0.4;
+  background: linear-gradient(to bottom, transparent, rgba(38,64,47,0.05), transparent);
 }
 
-/* المان ۴: هاله نوری اشرافی (Top Glow) */
+/* المان جدید: هاله نوری کنج (Ambient Glow) */
 .floating-layer::after {
   content: '';
   position: absolute;
-  width: 80vw;
-  height: 80vh;
-  top: -20vh;
-  right: -10vw;
-  background: radial-gradient(circle, rgba(209,154,0,0.07) 0%, transparent 70%);
-  filter: blur(50px);
+  width: 500px;
+  height: 500px;
+  top: -150px;
+  right: -100px;
+  background: radial-gradient(circle, rgba(209,154,0,0.05) 0%, transparent 70%);
+  border-radius: 50%;
 }
 
-/* انیمیشن فوقِ نرم */
-@keyframes floatMaster {
-  0% { transform: rotate(45deg) translate(0, 0) scale(1); }
-  33% { transform: rotate(47deg) translate(20px, -15px) scale(1.02); }
-  66% { transform: rotate(43deg) translate(-10px, 25px) scale(0.98); }
-  100% { transform: rotate(45deg) translate(0, 0) scale(1); }
+/* انیمیشن شناوری آرام و باکلاس */
+@keyframes luxuryDrift {
+  0% {
+    transform: rotate(45deg) translate(0, 0);
+  }
+  50% {
+    transform: rotate(47deg) translate(15px, -20px);
+  }
+  100% {
+    transform: rotate(43deg) translate(-10px, 15px);
+  }
 }
 
-/* لایه‌بندی محتوا */
-.site-header, main, footer {
+/* اطمینان از قرارگیری محتوا روی لایه شناور */
+.site-header, 
+main, 
+footer, 
+section {
   position: relative;
   z-index: 10;
-}
-
-/* بهینه‌سازی برای موبایل */
-@media (max-width: 768px) {
-  .float-1 { width: 120px; height: 120px; left: -20px; }
-  .floating-layer::after { display: none; }
 }
