--- a/index.html
+++ b/index.html
@@ -1,101 +1,88 @@
+<style>
 /* ============================================================
-   PREMIUM ARCHITECTURAL FLOATING LAYER (OPTIMIZED)
+   ULTRA-PREMIUM ARCHITECTURAL LAYER
    ============================================================ */
+:root {
+  --gold-accent: rgba(209,154,0,0.25);
+  --deep-green: rgba(38,64,47,0.12);
+  --soft-blue: rgba(0,85,138,0.18);
+}
 
-/* لایه اصلی نگهدارنده */
 .floating-layer {
   position: fixed;
-  inset: 0;
-  pointer-events: none; /* جلوگیری از تداخل با کلیک‌های کاربر */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
   z-index: 0;
   overflow: hidden;
-  background: transparent;
 }
 
-/* استایل مشترک المان‌های هندسی */
-.float {
-  position: absolute;
-  border: 0.5px solid rgba(38,64,47,0.12); /* خطوط مویی و ظریف */
-  background: linear-gradient(135deg, rgba(209,154,0,0.02) 0%, transparent 100%);
-  backdrop-filter: blur(1px);
-  transition: all 0.8s ease-out;
-}
-
-/* مربع شناور سمت چپ بالا (المان اصلی مورد نظر شما) */
+/* المان ۱: مربع طلایی شناور (سمت چپ بالا) */
 .float-1 {
-  width: 200px;
-  height: 200px;
-  top: 12%;
-  left: 7%;
-  border-color: rgba(209,154,0,0.25);
+  position: absolute;
+  width: 220px;
+  height: 220px;
+  top: 10%;
+  left: 5%;
+  border: 0.8px solid var(--gold-accent);
+  background: linear-gradient(145deg, rgba(209,154,0,0.05), transparent);
   transform: rotate(45deg);
-  animation: luxuryDrift 14s ease-in-out infinite alternate;
-  box-shadow: -10px -10px 30px rgba(209,154,0,0.03);
+  backdrop-filter: blur(2px);
+  animation: floatMaster 15s ease-in-out infinite alternate;
 }
 
-/* المان پایین سمت راست */
+/* المان ۲: مستطیل کشیده پایین */
 .float-2 {
-  width: 160px;
-  height: 160px;
-  bottom: 15%;
-  right: 10%;
-  border-color: rgba(0,85,138,0.18);
-  transform: rotate(-15deg);
-  animation: luxuryDrift 20s ease-in-out infinite alternate-reverse;
-}
-
-/* المان مینیمال مرکزی (بسیار محو) */
-.float-3 {
-  width: 300px;
+  position: absolute;
+  width: 120px;
   height: 300px;
   bottom: -50px;
-  left: 35%;
-  border-color: rgba(38,64,47,0.06);
-  border-radius: 50%; /* دایره بزرگ برای تضاد با مربع‌ها */
-  animation: luxuryDrift 25s linear infinite;
+  right: 12%;
+  border-left: 0.5px solid var(--soft-blue);
+  background: linear-gradient(to top, rgba(0,85,138,0.03), transparent);
+  transform: rotate(-10deg);
+  animation: floatMaster 22s ease-in-out infinite alternate-reverse;
 }
 
-/* المان جدید: خطوط راهنمای معماری (Luxury Grid Lines) */
+/* خطوط راهنمای عمودی */
 .floating-layer::before {
   content: '';
   position: absolute;
   top: 0;
-  left: 20%;
+  left: 15%;
   width: 1px;
   height: 100%;
-  background: linear-gradient(to bottom, transparent, rgba(38,64,47,0.05), transparent);
+  background: linear-gradient(to bottom, transparent, var(--deep-green), transparent);
+  opacity: 0.4;
 }
 
-/* المان جدید: هاله نوری کنج (Ambient Glow) */
+/* هاله نوری لوکس */
 .floating-layer::after {
   content: '';
   position: absolute;
   width: 500px;
   height: 500px;
-  top: -150px;
-  right: -100px;
-  background: radial-gradient(circle, rgba(209,154,0,0.05) 0%, transparent 70%);
-  border-radius: 50%;
+  top: -100px;
+  right: -50px;
+  background: radial-gradient(circle, rgba(209,154,0,0.08) 0%, transparent 70%);
 }
 
-/* انیمیشن شناوری آرام و باکلاس */
-@keyframes luxuryDrift {
-  0% {
-    transform: rotate(45deg) translate(0, 0);
-  }
-  50% {
-    transform: rotate(47deg) translate(15px, -20px);
-  }
-  100% {
-    transform: rotate(43deg) translate(-10px, 15px);
-  }
+@keyframes floatMaster {
+  0% { transform: rotate(45deg) translate(0, 0); }
+  50% { transform: rotate(48deg) translate(20px, -20px); }
+  100% { transform: rotate(42deg) translate(-10px, 10px); }
 }
 
-/* اطمینان از قرارگیری محتوا روی لایه شناور */
-.site-header, 
-main, 
-footer, 
-section {
+/* لایه‌بندی محتوا برای جلوگیری از رفتن زیر المان‌ها */
+.site-header, main, footer, section {
   position: relative;
   z-index: 10;
 }
+</style>
+
+<div class="floating-layer">
+    <div class="float float-1"></div>
+    <div class="float float-2"></div>
+</div>
