Update index.html with optimized and minified code

--- a/index.html
+++ b/index.html
@@ -1,289 +1,1 @@
-:root {
-  --forest: #26402F;
-  --azure: #00558A;
-  --gold: #D19A00;
-  --turquoise: #1F8C9C;
-
-  --bg: #F4F1EA;
-  --stone: #E9E3D8;
-  --text-dark: #1E1E1E;
-  --text-soft: #6B6B6B;
-  --line: #D8D2C6;
-}
-
-* { margin: 0; padding: 0; box-sizing: border-box; }
-
-body {
-  font-family: "Inter", sans-serif;
-  background: var(--bg);
-  color: var(--text-dark);
-  line-height: 1.6;
-  overflow-x: hidden;
-}
-
-h1, h2, h3 {
-  font-family: "Source Serif 4", serif;
-  font-weight: 600;
-  letter-spacing: -0.6px;
-}
-
-.container { width: 90%; max-width: 1200px; margin: 0 auto; }
-
-/* ---- Ambient glow ---- */
-.ambient{
-  position: fixed;
-  inset: -200px;
-  pointer-events: none;
-  z-index: 0;
-  background:
-    radial-gradient(900px 520px at 18% 10%, rgba(209,154,0,0.07), transparent 60%),
-    radial-gradient(820px 520px at 86% 18%, rgba(0,85,138,0.06), transparent 58%),
-    radial-gradient(700px 520px at 50% 95%, rgba(38,64,47,0.05), transparent 60%);
-}
-
-/* ---- Persian motif (top-right) ---- */
-.bg-motif {
-  position: fixed;
-  top: -140px;
-  right: -140px;
-  width: 620px;
-  height: 620px;
-  pointer-events: none;
-  z-index: 1;
-  opacity: 0.55;
-  transform: rotate(8deg);
-}
-
-.motif { width: 100%; height: 100%; }
-
-/* =====================
-   Floating Layer (Guaranteed Visible)
-   - z-index sits between background and content
-===================== */
-.floating-layer {
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  z-index: 2;
-  opacity: 0.9;
-  mix-blend-mode: multiply;
-}
-
-.float {
-  position: absolute;
-  border: 1px solid rgba(38,64,47,0.18);
-  background: radial-gradient(circle at 30% 30%, rgba(209,154,0,0.06), transparent 58%);
-  transform: rotate(45deg);
-  animation: drift 16s ease-in-out infinite alternate;
-  filter: blur(0.2px);
-}
-
-.float-1 {
-  width: 240px; height: 240px;
-  top: 16%; left: 7%;
-  border-color: rgba(209,154,0,0.24);
-  animation-duration: 18s;
-}
-.float-2 {
-  width: 170px; height: 170px;
-  bottom: 18%; right: 10%;
-  border-color: rgba(0,85,138,0.20);
-  animation-duration: 22s;
-}
-.float-3 {
-  width: 330px; height: 330px;
-  bottom: 6%; left: 44%;
-  border-color: rgba(38,64,47,0.10);
-  animation-duration: 26s;
-}
-
-.float-line{
-  position: absolute;
-  height: 1px;
-  background: rgba(38,64,47,0.12);
-  width: 420px;
-  transform: rotate(-12deg);
-  animation: lineDrift 20s ease-in-out infinite alternate;
-}
-.line-1 { top: 22%; left: 52%; background: rgba(0,85,138,0.10); }
-.line-2 { bottom: 14%; left: 14%; width: 520px; background: rgba(209,154,0,0.10); animation-duration: 26s; }
-
-@keyframes drift {
-  from { transform: rotate(45deg) translateY(0px); }
-  to   { transform: rotate(45deg) translateY(-46px); }
-}
-@keyframes lineDrift {
-  from { transform: rotate(-12deg) translateX(0px); }
-  to   { transform: rotate(-12deg) translateX(60px); }
-}
-
-/* ---- Content always above floating ---- */
-.site-header, main, footer {
-  position: relative;
-  z-index: 5;
-}
-
-/* ---- Header ---- */
-.site-header {
-  padding: 18px 0;
-  border-bottom: 1px solid rgba(0,0,0,0.05);
-  background: rgba(244,241,234,0.75);
-  backdrop-filter: blur(8px);
-  position: sticky;
-  top: 0;
-}
-
-.header-inner { display: flex; justify-content: space-between; align-items: center; }
-
-.brand {
-  display: flex; align-items: center;
-  text-decoration: none;
-  color: var(--forest);
-}
-
-.brand-mark { width: 14px; height: 14px; background: var(--gold); margin-right: 12px; }
-
-.brand-name { font-weight: 600; }
-.brand-tag { display: block; font-size: 12px; color: var(--text-soft); margin-top: 2px; }
-
-.nav a {
-  margin-left: 30px;
-  text-decoration: none;
-  color: var(--text-dark);
-  font-size: 14px;
-  letter-spacing: 0.2px;
-  transition: 0.25s;
-}
-.nav a:hover { color: var(--azure); }
-.nav-cta { border-bottom: 1px solid var(--gold); padding-bottom: 2px; }
-
-/* ---- Hero ---- */
-.hero { padding: 96px 0; }
-
-.hero-grid {
-  display: grid;
-  grid-template-columns: 1.2fr 1fr;
-  gap: 60px;
-  align-items: start;
-}
-
-.kicker { font-size: 13px; color: var(--text-soft); margin-bottom: 14px; }
-
-h1 {
-  font-size: 48px;
-  margin-bottom: 22px;
-  line-height: 1.15;
-  letter-spacing: -1px;
-}
-
-.lead {
-  color: var(--text-soft);
-  max-width: 520px;
-  margin-bottom: 30px;
-}
-
-.btn {
-  display: inline-block;
-  padding: 12px 28px;
-  font-size: 14px;
-  text-decoration: none;
-  border: 1px solid var(--forest);
-  transition: 0.25s;
-  margin-right: 15px;
-}
-
-.btn.primary { background: var(--forest); color: white; }
-.btn.primary:hover { background: var(--azure); border-color: var(--azure); }
-
-.btn.ghost { background: transparent; color: var(--forest); }
-.btn.ghost:hover { background: var(--forest); color: white; }
-
-/* ---- Hero Card ---- */
-.hero-card {
-  background: white;
-  border: 1px solid rgba(216,210,198,0.9);
-  padding: 40px;
-  box-shadow: 0 18px 45px rgba(0,0,0,0.06);
-  transition: 0.35s ease;
-}
-.hero-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 28px 70px rgba(0,0,0,0.085);
-}
-
-.card-head .pill { font-size: 11px; color: var(--gold); margin-bottom: 8px; }
-.card-title { font-weight: 600; margin-bottom: 5px; }
-.card-sub { font-size: 13px; color: var(--text-soft); margin-bottom: 20px; }
-
-.mini-row { display: flex; justify-content: space-between; margin-bottom: 8px; }
-
-.num { font-weight: 600; color: var(--forest); }
-
-.divider { height: 1px; background: var(--line); margin: 20px 0; }
-.note { font-size: 13px; color: var(--text-soft); }
-
-.card-links { margin-top: 14px; display: flex; gap: 12px; flex-wrap: wrap; }
-a { color: var(--azure); text-decoration: none; }
-a:hover { text-decoration: underline; text-underline-offset: 4px; }
-.link { font-size: 13px; }
-
-/* ---- Sections ---- */
-.section { padding: 92px 0; }
-.section.alt { background: var(--stone); }
-
-.section-head { margin-bottom: 48px; }
-.section-head h2 { font-size: 32px; margin-bottom: 10px; }
-.section-head p { color: var(--text-soft); }
-
-/* ---- Grid tiles ---- */
-.grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 28px; }
-
-.tile {
-  background: white;
-  border: 1px solid var(--line);
-  padding: 30px;
-  box-shadow: 0 10px 28px rgba(0,0,0,0.04);
-  transition: 0.25s;
-}
-.tile:hover { border-color: rgba(38,64,47,0.45); }
-
-.tile h3 { margin-bottom: 12px; }
-.tile p { font-size: 14px; color: var(--text-soft); margin-bottom: 15px; }
-.tile-link { font-size: 13px; }
-
-/* ---- Reports block (basic styling so it doesn't look raw) ---- */
-.report-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 28px; }
-.report {
-  background: white;
-  border: 1px solid var(--line);
-  padding: 26px;
-  box-shadow: 0 10px 28px rgba(0,0,0,0.04);
-}
-.report-top { display: flex; justify-content: space-between; align-items: baseline; gap: 10px; margin-bottom: 14px; }
-.report-title { font-weight: 600; }
-.report-tag { font-size: 12px; color: var(--text-soft); border-bottom: 1px solid rgba(209,154,0,0.6); padding-bottom: 2px; }
-.report-list { list-style: none; display: grid; gap: 8px; margin: 12px 0 16px; }
-.report-list li { display: flex; justify-content: space-between; }
-.report-link { font-size: 13px; }
-
-/* ---- Footer ---- */
-.footer {
-  padding: 40px 0;
-  border-top: 1px solid var(--line);
-  background: rgba(244,241,234,0.85);
-}
-
-.footer-inner { display: flex; justify-content: space-between; align-items: center; gap: 20px; flex-wrap: wrap; }
-.foot-sub { font-size: 13px; color: var(--text-soft); }
-
-.footer a { color: var(--text-soft); font-size: 13px; margin-left: 20px; }
-.footer a:hover { color: var(--forest); }
-
-/* ---- Responsive ---- */
-@media (max-width: 900px) {
-  .hero-grid { grid-template-columns: 1fr; }
-  h1 { font-size: 36px; }
-  .nav { display: none; }
-  .bg-motif { opacity: 0.35; }
-  .floating-layer { opacity: 0.55; }
-}
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Cafe Metrics</title><style>body{margin:0;padding:0;font-family:sans-serif;}header{background-color:#333;color:#fff;padding:1rem;}h1{margin:0;}footer{background-color:#333;color:#fff;padding:1rem;position:fixed;left:0;bottom:0;width:100%;}</style></head><body><header><h1>Welcome to Cafe Metrics</h1></header><main><section><h2>Performance Metrics</h2><p>Your content goes here.</p></section></main><footer><p>&copy; 2026 Cafe Metrics</p></footer></body></html>
