--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <div class="hero-grid">
           <div>
             <div class="kicker">Welcome to Cafe Metrics</div>
-            <h1>Understand Your Coffee Business</h1>
+            <h1>Operational Intelligence for Modern Cafes</h1>
             <p class="lead">Real-time analytics, customer insights, and growth strategies tailored for cafes of all sizes.</p>
             <div>
               <a href="#" class="btn primary">Start Free Trial</a>
